Fixed dice from overflowing at edges

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
 
 main {
   background-color: #f5f5f5;
-  height: 450px;
   max-width: 800px;
   border-radius: 5px;
   padding: 20px;
@@ -32,6 +31,12 @@ main {
   grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
   margin-bottom: 40px;
+}
+
+@media (max-width: 640px) {
+  .dice-container {
+    grid-template-columns: repeat(2, 1fr); 
+  }
 }
 
 .die-face {
